# ishimi

./: Cargo.toml  schema.toml
src/: download.rs  format.rs  formats.rs  main.rs  providers.rs
src/download/: loader_download.rs  mod_download.rs
src/download/mod_download/: curseforge.rs  direct.rs
src/format/: uklient.rs
src/format/ishimi/: schemas.rs
src/format/uklient/: schemas.rs
src/formats/ishimi/: schemas.rs
src/formats/uklient/: schemas.rs  validations.rs
src/providers/mods/: direct.rs  modrinth.rs
